--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -8,7 +8,6 @@ allow 102.211.56.250;
 allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.146.203.11;
-allow 103.163.218.11;
 allow 103.164.54.199;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -127,6 +126,7 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
+allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -143,7 +143,6 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 118.15.11.221;
 allow 118.163.74.160;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -153,6 +152,7 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
+allow 131.226.2.22;
 allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -217,6 +217,7 @@ allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.85.203;
+allow 168.119.186.172;
 allow 171.25.193.20;
 allow 171.25.193.234;
 allow 171.25.193.235;
@@ -540,6 +541,7 @@ allow 185.227.68.78;
 allow 185.231.102.51;
 allow 185.233.100.23;
 allow 185.235.146.29;
+allow 185.235.241.119;
 allow 185.241.208.115;
 allow 185.241.208.202;
 allow 185.241.208.204;
@@ -567,7 +569,6 @@ allow 185.35.202.222;
 allow 185.38.175.133;
 allow 185.40.4.100;
 allow 185.40.4.101;
-allow 185.40.4.121;
 allow 185.40.4.127;
 allow 185.40.4.132;
 allow 185.40.4.149;
@@ -706,7 +707,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.144.178.185;
 allow 198.144.178.187;
-allow 198.167.206.249;
+allow 198.167.206.182;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -722,6 +723,7 @@ allow 198.98.51.249;
 allow 198.98.54.49;
 allow 198.98.57.151;
 allow 198.98.57.74;
+allow 198.98.60.90;
 allow 198.98.61.60;
 allow 198.98.62.158;
 allow 199.189.27.123;
@@ -1019,7 +1021,6 @@ allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
 allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.254;
@@ -1274,6 +1275,7 @@ allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
+allow 2a01:4f8:c012:6ab1::1;
 allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1607,6 +1609,7 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1632,7 +1635,6 @@ allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5bdd::beef;
 allow 2a0f:85c1:356:5f5a::1;
-allow 2a0f:9400:7e11:8e09::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1972,8 +1974,6 @@ allow 94.142.244.16;
 allow 94.16.115.121;
 allow 94.16.116.81;
 allow 94.16.121.91;
-allow 94.177.106.236;
-allow 94.177.106.54;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
