--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -126,7 +126,6 @@ allow 109.169.33.163;
 allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
-allow 109.228.160.190;
 allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -144,7 +143,6 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 121.78.28.166;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -676,6 +674,8 @@ allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.137;
+allow 193.218.118.178;
+allow 193.218.118.89;
 allow 193.218.118.94;
 allow 193.237.221.228;
 allow 193.239.232.102;
@@ -845,7 +845,6 @@ allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:3514::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1004,6 +1003,7 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
+allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -1653,6 +1653,8 @@ allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
+allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
+allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:8a40:f313::29;
