--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -126,6 +126,7 @@ allow 109.169.33.163;
 allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
+allow 109.228.160.190;
 allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
@@ -152,7 +153,6 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 131.226.2.22;
-allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -259,7 +259,6 @@ allow 176.65.138.250;
 allow 176.65.144.142;
 allow 176.65.144.94;
 allow 176.97.114.202;
-allow 177.149.142.75;
 allow 178.162.197.91;
 allow 178.17.170.144;
 allow 178.17.171.102;
@@ -272,6 +271,7 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 179.35.0.124;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -567,8 +567,10 @@ allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
+allow 185.39.207.83;
 allow 185.40.4.100;
 allow 185.40.4.101;
+allow 185.40.4.121;
 allow 185.40.4.127;
 allow 185.40.4.132;
 allow 185.40.4.149;
@@ -675,6 +677,7 @@ allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.137;
 allow 193.218.118.178;
+allow 193.218.118.182;
 allow 193.218.118.89;
 allow 193.218.118.94;
 allow 193.237.221.228;
@@ -727,7 +730,6 @@ allow 198.98.51.249;
 allow 198.98.54.49;
 allow 198.98.57.151;
 allow 198.98.57.74;
-allow 198.98.60.90;
 allow 198.98.61.60;
 allow 198.98.62.158;
 allow 199.189.27.123;
@@ -1003,7 +1005,6 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -1067,6 +1068,7 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
+allow 2602:f704:10::1;
 allow 2602:f9f3:0:2::319;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
@@ -1354,6 +1356,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1600,6 +1603,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1653,6 +1657,7 @@ allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
+allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
@@ -1739,6 +1744,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1844,6 +1850,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1910,7 +1917,6 @@ allow 81.17.28.95;
 allow 81.181.104.22;
 allow 8.208.26.177;
 allow 8.209.106.19;
-allow 82.118.248.205;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
