--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -126,6 +126,7 @@ deny 109.169.33.163;
 deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
+deny 109.228.160.190;
 deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
@@ -152,7 +153,6 @@ deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
 deny 131.226.2.22;
-deny 135.225.96.187;
 deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
@@ -259,7 +259,6 @@ deny 176.65.138.250;
 deny 176.65.144.142;
 deny 176.65.144.94;
 deny 176.97.114.202;
-deny 177.149.142.75;
 deny 178.162.197.91;
 deny 178.17.170.144;
 deny 178.17.171.102;
@@ -272,6 +271,7 @@ deny 178.218.144.18;
 deny 178.218.144.51;
 deny 178.218.144.96;
 deny 178.218.144.99;
+deny 179.35.0.124;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -567,8 +567,10 @@ deny 185.254.196.141;
 deny 185.34.33.2;
 deny 185.35.202.222;
 deny 185.38.175.133;
+deny 185.39.207.83;
 deny 185.40.4.100;
 deny 185.40.4.101;
+deny 185.40.4.121;
 deny 185.40.4.127;
 deny 185.40.4.132;
 deny 185.40.4.149;
@@ -675,6 +677,7 @@ deny 193.189.100.205;
 deny 193.189.100.206;
 deny 193.218.118.137;
 deny 193.218.118.178;
+deny 193.218.118.182;
 deny 193.218.118.89;
 deny 193.218.118.94;
 deny 193.237.221.228;
@@ -727,7 +730,6 @@ deny 198.98.51.249;
 deny 198.98.54.49;
 deny 198.98.57.151;
 deny 198.98.57.74;
-deny 198.98.60.90;
 deny 198.98.61.60;
 deny 198.98.62.158;
 deny 199.189.27.123;
@@ -1003,7 +1005,6 @@ deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
-deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
@@ -1067,6 +1068,7 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
+deny 2602:f704:10::1;
 deny 2602:f9f3:0:2::319;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
@@ -1354,6 +1356,7 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1600,6 +1603,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1653,6 +1657,7 @@ deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
+deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
@@ -1739,6 +1744,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1844,6 +1850,7 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1910,7 +1917,6 @@ deny 81.17.28.95;
 deny 81.181.104.22;
 deny 8.208.26.177;
 deny 8.209.106.19;
-deny 82.118.248.205;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
