--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -126,6 +126,7 @@ set_real_ip_from 109.169.33.163;
 set_real_ip_from 109.199.101.106;
 set_real_ip_from 109.199.101.134;
 set_real_ip_from 109.199.105.142;
+set_real_ip_from 109.228.160.190;
 set_real_ip_from 109.248.11.6;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
@@ -152,7 +153,6 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 131.226.2.22;
-set_real_ip_from 135.225.96.187;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
@@ -259,7 +259,6 @@ set_real_ip_from 176.65.138.250;
 set_real_ip_from 176.65.144.142;
 set_real_ip_from 176.65.144.94;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.149.142.75;
 set_real_ip_from 178.162.197.91;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.171.102;
@@ -272,6 +271,7 @@ set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
+set_real_ip_from 179.35.0.124;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -567,8 +567,10 @@ set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
 set_real_ip_from 185.38.175.133;
+set_real_ip_from 185.39.207.83;
 set_real_ip_from 185.40.4.100;
 set_real_ip_from 185.40.4.101;
+set_real_ip_from 185.40.4.121;
 set_real_ip_from 185.40.4.127;
 set_real_ip_from 185.40.4.132;
 set_real_ip_from 185.40.4.149;
@@ -675,6 +677,7 @@ set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.218.118.137;
 set_real_ip_from 193.218.118.178;
+set_real_ip_from 193.218.118.182;
 set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.218.118.94;
 set_real_ip_from 193.237.221.228;
@@ -727,7 +730,6 @@ set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.54.49;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
-set_real_ip_from 198.98.60.90;
 set_real_ip_from 198.98.61.60;
 set_real_ip_from 198.98.62.158;
 set_real_ip_from 199.189.27.123;
@@ -1003,7 +1005,6 @@ set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
-set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
@@ -1067,6 +1068,7 @@ set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
+set_real_ip_from 2602:f704:10::1;
 set_real_ip_from 2602:f9f3:0:2::319;
 set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1354,6 +1356,7 @@ set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1600,6 +1603,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1653,6 +1657,7 @@ set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
+set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
@@ -1739,6 +1744,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
@@ -1844,6 +1850,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1910,7 +1917,6 @@ set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.181.104.22;
 set_real_ip_from 8.208.26.177;
 set_real_ip_from 8.209.106.19;
-set_real_ip_from 82.118.248.205;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
