--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -106,6 +106,7 @@ allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:3514::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
