--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -200,6 +200,7 @@ deny 161.97.71.11;
 deny 162.210.173.17;
 deny 162.216.18.62;
 deny 162.247.72.192;
+deny 162.247.72.199;
 deny 162.247.74.200;
 deny 162.247.74.201;
 deny 162.247.74.202;
@@ -680,7 +681,6 @@ deny 193.218.118.178;
 deny 193.218.118.182;
 deny 193.218.118.188;
 deny 193.218.118.89;
-deny 193.218.118.94;
 deny 193.237.221.228;
 deny 193.239.232.102;
 deny 193.26.115.43;
@@ -1086,6 +1086,7 @@ deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::c;
+deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:101:200::53c8;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
@@ -1358,6 +1359,7 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1368,6 +1370,7 @@ deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:7025::1;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1662,7 +1665,6 @@ deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
-deny 2a0f:e586:f:f:f10e:eca5:5d0e:135b;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
@@ -1853,6 +1855,7 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1889,7 +1892,6 @@ deny 5.79.66.19;
 deny 60.37.64.109;
 deny 62.133.45.2;
 deny 62.171.137.169;
-deny 62.182.84.146;
 deny 64.190.76.2;
 deny 64.190.76.3;
 deny 64.190.76.4;
@@ -1928,6 +1930,7 @@ deny 82.221.131.86;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
+deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.226.13;
 deny 84.239.46.144;
